fix: remove external inquiry verification
