# apps/api/openapi.json
@@ -1118,11 +1118,6 @@
           "consented" : {
             "type" : "boolean"
           },
-          "turnstileToken" : {
-            "type" : "string",
-            "maxLength" : 2048,
-            "minLength" : 0
-          },
           "companyWebsite" : {
             "type" : "string",
             "maxLength" : 240,
@@ -1560,57 +1555,57 @@
           "container" : {
             "type" : "boolean"
           },
-          "string" : {
+          "nodeType" : {
+            "type" : "string",
+            "enum" : [ "ARRAY", "BINARY", "BOOLEAN", "MISSING", "NULL", "NUMBER", "OBJECT", "POJO", "STRING" ]
+          },
+          "integralNumber" : {
+            "type" : "boolean"
+          },
+          "floatingPointNumber" : {
+            "type" : "boolean"
+          },
+          "missingNode" : {
+            "type" : "boolean"
+          },
+          "bigInteger" : {
+            "type" : "boolean"
+          },
+          "valueNode" : {
+            "type" : "boolean"
+          },
+          "bigDecimal" : {
             "type" : "boolean"
           },
           "number" : {
             "type" : "boolean"
           },
-          "long" : {
-            "type" : "boolean"
-          },
           "int" : {
             "type" : "boolean"
           },
+          "long" : {
+            "type" : "boolean"
+          },
+          "double" : {
+            "type" : "boolean"
+          },
           "binary" : {
+            "type" : "boolean"
+          },
+          "short" : {
             "type" : "boolean"
           },
           "textual" : {
             "type" : "boolean",
             "deprecated" : true
           },
-          "pojo" : {
+          "string" : {
             "type" : "boolean"
           },
           "boolean" : {
             "type" : "boolean"
           },
-          "double" : {
-            "type" : "boolean"
-          },
-          "short" : {
-            "type" : "boolean"
-          },
-          "missingNode" : {
-            "type" : "boolean"
-          },
-          "valueNode" : {
-            "type" : "boolean"
-          },
-          "floatingPointNumber" : {
-            "type" : "boolean"
-          },
-          "nodeType" : {
-            "type" : "string",
-            "enum" : [ "ARRAY", "BINARY", "BOOLEAN", "MISSING", "NULL", "NUMBER", "OBJECT", "POJO", "STRING" ]
-          },
-          "bigInteger" : {
-            "type" : "boolean"
-          },
-          "bigDecimal" : {
-            "type" : "boolean"
-          },
-          "integralNumber" : {
+          "pojo" : {
             "type" : "boolean"
           },
           "embeddedValue" : {
